--- a/src/assets/css/intro_m.css
+++ b/src/assets/css/intro_m.css
@@ -1,6 +1,16 @@
 .contents .main .slide-1:before {
-    background: #eee url(http://design.ebiznetworks.co.kr/sun/tourist/img/ulsan-rock.co.kr/intro/m/mv_1.jpg) no-repeat center 80% / cover;
+  background: #eee
+    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/m/mv_1.jpg)
+    no-repeat center 80% / cover;
+}
+.contents .main .slide-1:after {
+  background: rgba(0, 0, 0, 0.5);
 }
 .contents .main .slide-2:before {
-    background: #eee url(http://design.ebiznetworks.co.kr/sun/tourist/img/ulsan-rock.co.kr/intro/m/mv_2.jpg) no-repeat center 100% / cover;
+  background: #eee
+    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/m/mv_2.jpg)
+    no-repeat center 100% / cover;
+}
+.contents .main .slide-2:after {
+  background: rgba(0, 0, 0, 0.5);
 }
