--- a/src/template/include/_head.html
+++ b/src/template/include/_head.html
@@ -16,16 +16,17 @@
 
 <!-- local -->
 
-<link rel="stylesheet" href="@@path/css/reset.css">
-<link rel="stylesheet" href="@@path/css/common.css">
-<link rel="stylesheet" href="@@path/css/totalweb.css">
-<link rel="stylesheet" href="@@path/css/@@pathCss">
+<link rel="stylesheet" href="@@path/reset.css">
+<link rel="stylesheet" href="@@path/common.css">
+<link rel="stylesheet" href="@@path/totalweb.css">
+<link rel="stylesheet" href="@@path/@@pathCss">
+<!-- <link rel="stylesheet" href="../../static/css/intro.css"> -->
 
 
 
 @@if (pathCss === "init.css") {
 <!--페이지 전용 CSS//메인화면 제어부분//-->
-<link rel="stylesheet" href="@@path/sokcho-port.co.kr/intro.css">
+<link rel="stylesheet" href="@@path/dongmyeong-port.co.kr/intro.css">
 }
 
 <!--js-->
