dongmyeong-port pc views upload

--- a/src/template/about/_contents_about.html
+++ b/src/template/about/_contents_about.html
@@ -2,7 +2,7 @@
 "siteName": "@@siteName",
 "imgPath":"@@imgPath",
 "baseCssPath":"@@baseCssPath",
-"pathCss": "about/init.css",
+"pathCss": "@@domain/about/init.css",
 "isPageMenu" : "true",
 "localName" : "@@localName"
 })
