dongmyeong-port view_s mobile upload

--- a/src/template_m/include/_head.html
+++ b/src/template_m/include/_head.html
@@ -12,15 +12,15 @@
     <link rel="stylesheet" href="http://static.sampobeach.co.kr/css/totalmobile.css">
     -->
 <!-- local -->
-<link rel="stylesheet" href="@@path/css/reset.css">
-<link rel="stylesheet" href="@@path/css/common_m.css">
-<link rel="stylesheet" href="@@path/css/totalmobile.css">
-<link rel="stylesheet" href="@@path/css/@@pathCss">
+<link rel="stylesheet" href="@@path/reset.css">
+<link rel="stylesheet" href="@@path/common_m.css">
+<link rel="stylesheet" href="@@path/totalmobile.css">
+<link rel="stylesheet" href="@@path/@@pathCss">
 
 
 @@if (pathCss === "init_m.css") {
 <!--페이지 전용 CSS//메인화면 제어부분//-->
-<link rel="stylesheet" href="@@path/sokcho-port.co.kr/intro_m.css">
+<link rel="stylesheet" href="@@path/dongmyeong-port.co.kr/intro_m.css">
 }
 
 <!--js-->
