tourist yeongrang-lake upload test

--- a/src/assets/css/intro.css
+++ b/src/assets/css/intro.css
@@ -1,11 +1,11 @@
 .contents .main .slide-1:before {
   background: #000
-    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/mv_1.jpg)
+    url(http://dh715.ebiz.test/img/tourist/sokcho/yeongrang-lake.co.kr/intro/mv_1.jpg)
     no-repeat center;
 }
 .contents .main .slide-2:before {
   background: #eee
-    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/mv_2.jpg)
+    url(http://dh715.ebiz.test/img/tourist/sokcho/yeongrang-lake.co.kr/intro/mv_2.jpg)
     no-repeat center;
 }
 .contents .main .slide-1:after,
