--- a/src/template/waycome/_contents_waycome.html
+++ b/src/template/waycome/_contents_waycome.html
@@ -23,7 +23,7 @@
                     <dl>
                         <dt class="skip"></dt>
                         <dd>
-                            <p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">@@siteName</span>을 입력</p>
+                            <p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">@@siteName</span>를 입력</p>
                             <p class="dot"><span class="c-blue f-bd">@@wayCome.address </span> 주소를 입력</p>
                         </dd>
                     </dl>
@@ -33,10 +33,7 @@
                         <dd>
                             <p class="dot">`+ wayCome.transport[i].step +`</p>
                         </dd>
-                        <dt>- `+ wayCome.transport[i].title2 +`</dt>
-                        <dd>
-                            <p class="dot">`+ wayCome.transport[i].step2 +`</p>
-                        </dd>
+                        
                         </dl>
                         }
                         <p class="row-btn">
