--- a/src/template/include/_head.html
+++ b/src/template/include/_head.html
@@ -26,7 +26,7 @@
 
 @@if (pathCss === "init.css") {
 <!--페이지 전용 CSS//메인화면 제어부분//-->
-<link rel="stylesheet" href="@@path/dongmyeong-port.co.kr/intro.css">
+<link rel="stylesheet" href="@@path/yeongrang-lake.co.kr/intro.css">
 }
 
 <!--js-->
