--- a/src/template/tourist/_list/_list_small_temp.html
+++ b/src/template/tourist/_list/_list_small_temp.html
@@ -1,6 +1,6 @@
 @@for (var i = 0; i < 4; i++) {
     <li>
-        <figure class="tour-img"><img src="http://design.ebiznetworks.co.kr/lhc/tourist-incheon/img/somuui-do.co.kr/tourist/`+list[i].imgName+`" alt="@@listName"></figure>
+        <figure class="tour-img"><img src="http://img.sampobeach.co.kr/tourist/`+list[i].imgName+`" alt="@@listName"></figure>
         <dl class="txt-box">
             <dt class="txt-title">
                 <h4>`+ list[i].title +`</h4>
