--- a/src/assets/css/intro_m.css
+++ b/src/assets/css/intro_m.css
@@ -1,6 +1,6 @@
 .contents .main .slide-1:before {
   background: #eee
-    url(http://dh715.ebiz.test/img/tourist/sokcho/yeongrang-lake.co.kr/intro/m/mv_1.jpg)
+    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/m/mv_1.jpg)
     no-repeat center 80% / cover;
 }
 .contents .main .slide-1:after {
@@ -8,7 +8,7 @@
 }
 .contents .main .slide-2:before {
   background: #eee
-    url(http://dh715.ebiz.test/img/tourist/sokcho/yeongrang-lake.co.kr/intro/m/mv_2.jpg)
+    url(http://sunnyking77.ebiz.test/img/tourist/sokcho/dongmyeong-port.co.kr/intro/m/mv_2.jpg)
     no-repeat center 100% / cover;
 }
 .contents .main .slide-2:after {
