--- a/src/template/_map_intro.html
+++ b/src/template/_map_intro.html
@@ -1,16 +1,24 @@
 <!-- 메인페이지 오시는길 570x400-->
 
-<div style="font:normal normal 400 12px/normal dotum, sans-serif; width:570px; height:432px; color:#333; position:relative">
-    <div style="height: 400px;">
-        <a href="https://map.kakao.com/?urlX=846087.0&amp;urlY=1313394.0&amp;itemId=8008145&amp;q=%EC%98%81%EB%9E%91%ED%98%B8&amp;srcid=8008145&amp;map_type=TYPE_MAP&amp;from=roughmap" target="_blank"><img class="map" src="http://t1.daumcdn.net/roughmap/imgmap/8b45261ce14cba088d23194465d75b8991b8470fc8fc4ae8594162d543e7ca98" width="568px" height="398px" style="border:1px solid #ccc;"></a>
-    </div>
-    <div style="overflow: hidden; padding: 7px 11px; border: 1px solid rgba(0, 0, 0, 0.1); border-radius: 0px 0px 2px 2px; background-color: rgb(249, 249, 249);">
-        <a href="https://map.kakao.com" target="_blank" style="float: left;"><img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵" style="display:block;width:72px;height:16px"></a>
-        <div style="float: right; position: relative; top: 1px; font-size: 11px;"><a target="_blank" href="https://map.kakao.com/?from=roughmap&amp;srcid=8008145&amp;confirmid=8008145&amp;q=%EC%98%81%EB%9E%91%ED%98%B8&amp;rv=on" style="float:left;height:15px;padding-top:1px;line-height:15px;color:#000;text-decoration: none;">로드뷰</a>
-            <span style="width: 1px;padding: 0;margin: 0 8px 0 9px;height: 11px;vertical-align: top;position: relative;top: 2px;border-left: 1px solid #d0d0d0;float: left;"></span>
-            <a target="_blank" href="https://map.kakao.com/?from=roughmap&amp;eName=%EC%98%81%EB%9E%91%ED%98%B8&amp;eX=846087.0&amp;eY=1313394.0" style="float:left;height:15px;padding-top:1px;line-height:15px;color:#000;text-decoration: none;">길찾기</a>
-            <span style="width: 1px;padding: 0;margin: 0 8px 0 9px;height: 11px;vertical-align: top;position: relative;top: 2px;border-left: 1px solid #d0d0d0;float: left;"></span>
-            <a target="_blank" href="https://map.kakao.com?map_type=TYPE_MAP&amp;from=roughmap&amp;srcid=8008145&amp;itemId=8008145&amp;q=%EC%98%81%EB%9E%91%ED%98%B8&amp;urlX=846087.0&amp;urlY=1313394.0" style="float:left;height:15px;padding-top:1px;line-height:15px;color:#000;text-decoration: none;">지도 크게 보기</a>
-        </div>
+<div
+    style="font:normal normal 400 12px/normal dotum, sans-serif; width:570px; height:432px; color:#333; position:relative">
+    <div style="height: 400px;"><a
+            href="https://map.kakao.com/?urlX=827464.0&amp;urlY=1295095.0&amp;itemId=25035970&amp;q=%ED%86%A0%EC%99%95%EC%84%B1%ED%8F%AD%ED%8F%AC&amp;srcid=25035970&amp;map_type=TYPE_MAP&amp;from=roughmap"
+            target="_blank"><img class="map"
+                src="http://t1.daumcdn.net/roughmap/imgmap/795a3df32928702038f3ccba52ddd766b5d855a185b6c3ed1197c66230e0b627"
+                width="568px" height="398px" style="border:1px solid #ccc;"></a></div>
+    <div
+        style="overflow: hidden; padding: 7px 11px; border: 1px solid rgba(0, 0, 0, 0.1); border-radius: 0px 0px 2px 2px; background-color: rgb(249, 249, 249);">
+        <a href="https://map.kakao.com" target="_blank" style="float: left;"><img
+                src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16"
+                alt="카카오맵" style="display:block;width:72px;height:16px"></a>
+        <div style="float: right; position: relative; top: 1px; font-size: 11px;"><a target="_blank"
+                href="https://map.kakao.com/?from=roughmap&amp;eName=%ED%86%A0%EC%99%95%EC%84%B1%ED%8F%AD%ED%8F%AC&amp;eX=827464.0&amp;eY=1295095.0"
+                style="float:left;height:15px;padding-top:1px;line-height:15px;color:#000;text-decoration: none;">길찾기</a><span
+                style="width: 1px;padding: 0;margin: 0 8px 0 9px;height: 11px;vertical-align: top;position: relative;top: 2px;border-left: 1px solid #d0d0d0;float: left;"></span><a
+                target="_blank"
+                href="https://map.kakao.com?map_type=TYPE_MAP&amp;from=roughmap&amp;srcid=25035970&amp;itemId=25035970&amp;q=%ED%86%A0%EC%99%95%EC%84%B1%ED%8F%AD%ED%8F%AC&amp;urlX=827464.0&amp;urlY=1295095.0"
+                style="float:left;height:15px;padding-top:1px;line-height:15px;color:#000;text-decoration: none;">지도 크게
+                보기</a></div>
     </div>
 </div>
