--- a/src/template_m/include/_head.html
+++ b/src/template_m/include/_head.html
@@ -20,7 +20,7 @@
 
 @@if (pathCss === "init_m.css") {
 <!--페이지 전용 CSS//메인화면 제어부분//-->
-<link rel="stylesheet" href="@@path/dongmyeong-port.co.kr/intro_m.css">
+<link rel="stylesheet" href="@@path/towangseong.co.kr/intro_m.css">
 }
 
 <!--js-->
