--- a/src/assets/css/intro.css
+++ b/src/assets/css/intro.css
@@ -1,9 +1,9 @@
 .contents .main .slide-1:before {
-  background: #000 url(http://img.dongmyeong-port.co.kr/intro/mv_1.jpg)
+  background: #000 url(http://img.towangseong.co.kr/intro/mv_1.jpg)
     no-repeat center;
 }
 .contents .main .slide-2:before {
-  background: #eee url(http://img.dongmyeong-port.co.kr/intro/mv_2.jpg)
+  background: #eee url(http://img.towangseong.co.kr/intro/mv_2.jpg)
     no-repeat center;
 }
 .contents .main .slide-1:after,
